--- a/assets/scss/components/sections/_section-posts.scss
+++ b/assets/scss/components/sections/_section-posts.scss
@@ -98,14 +98,21 @@
 
 .post-item {
   background-color: #eee;
-  height: 538px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 
+  @include lg-min {
+    min-height: 538px;
+  }
+
+  @include lg-md {
+    min-height: 518px;
+  }
+
   @include sm {
-    height: 482px;
+    min-height: 482px;
   }
 
   &__image {
@@ -136,10 +143,6 @@
   }
 
   &:nth-child(1) {
-    @include lg-md {
-      height: 518px;
-    }
-
     .post-item {
       &__text {
         bottom: 57px;
@@ -163,10 +166,6 @@
   }
 
   &:nth-child(2) {
-    @include lg-md {
-      height: 518px;
-    }
-
     .post-item {
       &__text {
         bottom: 30px;
@@ -189,6 +188,10 @@
   }
 
   &:nth-child(3) {
+    @include lg-md {
+      min-height: 538px;
+    }
+
     .post-item {
       &__title {
         @include md-sm {
@@ -213,6 +216,10 @@
   }
 
   &:nth-child(4) {
+    @include lg-md {
+      min-height: 538px;
+    }
+
     .post-item {
       &__text {
         bottom: 30px;
@@ -235,6 +242,10 @@
   }
 
   &:nth-child(5) {
+    @include lg-md {
+      min-height: 538px;
+    }
+
     .post-item {
       &__title {
         padding: 0 12px;
@@ -265,6 +276,10 @@
   }
 
   &:nth-child(6) {
+    @include lg-md {
+      min-height: 538px;
+    }
+
     .post-item {
       &__title {
         @include md-sm {
