--- a/assets/scss/components/sections/_subscribe-form.scss
+++ b/assets/scss/components/sections/_subscribe-form.scss
@@ -39,118 +39,33 @@
 .subscribe-input {
   width: 100%;
   height: 60px;
+  padding-left: 30px;
   background-color: #38405A;
-  border: none;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.25);
-  letter-spacing: 2px;
-  padding-left: 31px;
-  color: white;
-
-  &:hover {
-    background-color: #4C546B;
-    position: relative;
-    border-top: 2px solid #5E657A;
-    border-left: 2px solid #5E657A;
-    border-right: 2px solid #5E657A;
-    border-bottom: 2px solid white;
-  }
-
-  &:focus {
-    border: none;
-    transition: 0.75s;
-  }
+  font-size: 18px;
+  letter-spacing: 2.7px;
+  transition: background-color 0.5s, border-color 0.5s;
+  color: $color-light;
+  border: 2px solid rgba($color-light, 0);
+  border-bottom-color: rgba($color-light, 0.25);
 
   &::placeholder {
     color: #637596;
-    font-size: 18px;
-    position: relative;
-    right: 27px;
-    letter-spacing: 2.7px;
+  }
 
-    @include sm {
-      padding-left: 20px;
+  &:hover,
+  &:focus {
+    border-color: rgba($color-light, 0.15);
+    border-bottom-color: $color-light;
+    background-color: rgba($color-light, 0.15);
+
+    &::placeholder {
+      color: #869BAB;
     }
   }
 
   &:nth-child(1) {
-    @include lg-min {
-      letter-spacing: 1.8px;
-
-      &:hover {
-        padding-left: 31px;
-        padding-bottom: 3px;
-      }
-    }
-
-    @include lg-md {
-      &:hover {
-        padding-bottom: 3px;
-      }
-    }
-
     @include md-sm {
-      width: 100%;
-      padding-left: 42px;
       grid-column: 1 / span 2;
-
-      &:hover {
-        padding-bottom: 3px;
-      }
-    }
-
-    @include sm {
-      width: 100%;
-      position: relative;
-
-      &:hover {
-        padding-bottom: 3px;
-      }
-    }
-
-    &::placeholder {
-      position: relative;
-      top: 2px;
-      padding-left: 28px;
-
-      @include lg-md {
-        padding-left: 28px;
-      }
-
-      @include md-sm {
-        padding-top: 3px;
-        padding-left: 17px;
-      }
-
-      @include sm {
-        letter-spacing: 2.7px;
-      }
-    }
-  }
-
-  &:nth-child(2) {
-    @include lg-min {
-      letter-spacing: 1.8px;
-    }
-
-    @include sm {
-      width: 100%;
-    }
-
-    &:hover {
-      padding-left: 31px;
-      padding-bottom: 3px;
-    }
-
-    &::placeholder {
-      position: relative;
-      top: 2px;
-      padding-left: 28px;
-
-      @include sm {
-        padding-left: 28px;
-        top: 2px;
-        letter-spacing: 2.7px;
-      }
     }
   }
 }
